// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectEncoder Test Suite Throws error for invalid ObjectMetadata 1`] = `"not valid metadata, please check [ { keywordLocation: '#/required', instanceLocation: '#/properties' } ]"`;

exports[`ObjectEncoder Test Suite should encode and decode an object correctly 1`] = `
[
  1,
  0,
  0,
  1,
  0,
  2023,
  1,
  1,
  52,
  12,
  30,
  0,
  42,
  0,
  1,
  0,
  0,
  1,
]
`;

exports[`ObjectEncoder Test Suite should encode and decode an object correctly 2`] = `
{
  "prop_bool": true,
  "prop_category": "B",
  "prop_datetime": "2023-01-01T12:30:00.000Z",
  "prop_numeric": 42,
  "prop_object": {
    "nested_bool": false,
    "nested_category": "Z",
  },
}
`;

exports[`ObjectEncoder Test Suite should encode and decode correctly with nested object and list object 1`] = `
[
  "root_prop_bool_is_true",
  "root_prop_bool_is_false",
  "root_prop_category_is_A",
  "root_prop_category_is_B",
  "root_prop_category_is_C",
  "root_prop_datetime_year",
  "root_prop_datetime_month",
  "root_prop_datetime_day",
  "root_prop_datetime_isoWeek",
  "root_prop_datetime_hour",
  "root_prop_datetime_minute",
  "root_prop_datetime_second",
  "root_prop_numeric",
  "root_prop_object_nested_bool_is_true",
  "root_prop_object_nested_bool_is_false",
  "root_prop_object_nested_category_is_X",
  "root_prop_object_nested_category_is_Y",
  "root_prop_object_nested_category_is_Z",
  "root_prop_object_nested_list_0_item_name_is_Item1",
  "root_prop_object_nested_list_0_item_name_is_Item2",
  "root_prop_object_nested_list_0_item_name_is_Item3",
  "root_prop_object_nested_list_0_item_value",
  "root_prop_object_nested_list_1_item_name_is_Item1",
  "root_prop_object_nested_list_1_item_name_is_Item2",
  "root_prop_object_nested_list_1_item_name_is_Item3",
  "root_prop_object_nested_list_1_item_value",
]
`;

exports[`ObjectEncoder Test Suite should encode and decode correctly with nested object and list object 2`] = `
[
  1,
  0,
  0,
  1,
  0,
  2023,
  1,
  1,
  52,
  12,
  30,
  0,
  42,
  0,
  1,
  0,
  0,
  1,
  1,
  0,
  0,
  10,
  0,
  1,
  0,
  20,
]
`;

exports[`ObjectEncoder Test Suite should encode and decode correctly with nested object and list object 3`] = `
[
  "root_prop_bool_is_true",
  "root_prop_bool_is_false",
  "root_prop_category_is_A",
  "root_prop_category_is_B",
  "root_prop_category_is_C",
  "root_prop_datetime_year",
  "root_prop_datetime_month",
  "root_prop_datetime_day",
  "root_prop_datetime_isoWeek",
  "root_prop_datetime_hour",
  "root_prop_datetime_minute",
  "root_prop_datetime_second",
  "root_prop_numeric",
  "root_prop_object_nested_bool_is_true",
  "root_prop_object_nested_bool_is_false",
  "root_prop_object_nested_category_is_X",
  "root_prop_object_nested_category_is_Y",
  "root_prop_object_nested_category_is_Z",
  "root_prop_object_nested_list_item_name_is_Item1_max",
  "root_prop_object_nested_list_item_name_is_Item2_max",
  "root_prop_object_nested_list_item_name_is_Item3_max",
  "root_prop_object_nested_list_item_value_max",
  "root_prop_object_nested_list_item_name_is_Item1_min",
  "root_prop_object_nested_list_item_name_is_Item2_min",
  "root_prop_object_nested_list_item_name_is_Item3_min",
  "root_prop_object_nested_list_item_value_min",
  "root_prop_object_nested_list_item_name_is_Item1_avg",
  "root_prop_object_nested_list_item_name_is_Item2_avg",
  "root_prop_object_nested_list_item_name_is_Item3_avg",
  "root_prop_object_nested_list_item_value_avg",
  "root_prop_object_nested_list_item_name_is_Item1_diff",
  "root_prop_object_nested_list_item_name_is_Item2_diff",
  "root_prop_object_nested_list_item_name_is_Item3_diff",
  "root_prop_object_nested_list_item_value_diff",
  "root_prop_object_nested_list_item_name_is_Item1_variance",
  "root_prop_object_nested_list_item_name_is_Item2_variance",
  "root_prop_object_nested_list_item_name_is_Item3_variance",
  "root_prop_object_nested_list_item_value_variance",
  "root_prop_object_nested_list_item_name_is_Item1_sum",
  "root_prop_object_nested_list_item_name_is_Item2_sum",
  "root_prop_object_nested_list_item_name_is_Item3_sum",
  "root_prop_object_nested_list_item_value_sum",
]
`;

exports[`ObjectEncoder Test Suite should encode and decode correctly with nested object and list object 4`] = `
[
  1,
  0,
  0,
  1,
  0,
  2023,
  1,
  1,
  52,
  12,
  30,
  0,
  42,
  0,
  1,
  0,
  0,
  1,
  1,
  1,
  0,
  20,
  0,
  0,
  0,
  10,
  0.5,
  0.5,
  0,
  15,
  1,
  1,
  0,
  10,
  0.25,
  0.25,
  0,
  25,
  1,
  1,
  0,
  30,
]
`;
